Fix routing issue with trailing slash
