# backend/dtos/cocktail.go
@@ -1,5 +1,10 @@
 package dtos
 
+type CreateCocktailDto struct {
+	Title    string `json:"title"`
+	ImageURL string `json:"image_url"`
+}
+
 type CocktailDto struct {
 	Title    string `json:"title"`
 	ImageURL string `json:"image_url"`
